[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
arrayvec = "0.7.2"
console_error_panic_hook = "0.1.7"
stdweb = "0.4.20"
wasm-bindgen = "0.2.82"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
